--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,16 +10,20 @@ header{
     height: 448px;
     display: flex;
     justify-content: space-between ;
+
 }
 
 .ban{
-        text-decoration-color: rgba(78, 75, 75, 0.5);
+    color: rgba(14, 14, 14, 0.5);
+
 }
 .bd{
-    padding-left: 48px;
-    padding-top: 129.6px;
+    padding-left:44.8px;
+
     width: 497.6px;
     text-align: top left;
+    font-size: 23px;
+    gap: 64px;
     
 }
 
@@ -39,4 +43,45 @@ header{
 
 
   
+}
+
+.box{
+    display:flex ;
+    justify-content: space-between;
+    padding-left:128px;
+    padding-right: 128px;
+    gap: 20px;
+   
+
+    
+
+}
+.box-card{
+    background: rgb(255, 255, 255);
+    border-radius: 12.8px;
+    padding: 19.2px;
+    width: 241.6px;
+    height: 195.2px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    gap:19.2px;
+    margin: 0px 24px;
+
+}
+.tvf{
+    
+    gap: 19.2px;
+   margin-left: 128px;
+   margin-right: 128px;
+   margin-top: 64px;
+}
+.tvfu{
+    color: rgb(14, 14, 14);
+    font-size: 32px;
+
+}
+.para{
+    color: rgba(14, 14, 14, 0.7);
+    gap:  9.6px;
+    font-size: 12.8px;
+
 }
