--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,6 +24,7 @@ header{
     text-align: top left;
     font-size: 23px;
     gap: 64px;
+    margin-left: 128px;
     
 }
 
@@ -50,7 +51,7 @@ header{
     justify-content: space-between;
     padding-left:128px;
     padding-right: 128px;
-    gap: 20px;
+    gap:19.2px;
    
 
     
@@ -67,12 +68,20 @@ header{
     margin: 0px 24px;
 
 }
+
+.bcp{
+ color: rgba(14, 14, 14, 0.7);
+
+}
 .tvf{
     
-    gap: 19.2px;
+   gap: 19.2px;
    margin-left: 128px;
    margin-right: 128px;
    margin-top: 64px;
+}
+.head{
+    margin-left: 32px;
 }
 .tvfu{
     color: rgb(14, 14, 14);
@@ -83,5 +92,40 @@ header{
     color: rgba(14, 14, 14, 0.7);
     gap:  9.6px;
     font-size: 12.8px;
+    font-weight: 320px;
+    line-height: 19.2px;
+    margin: 9.6px 0px;
+
+}
+
+
+.dgm-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 60px;
+    padding: 25.6px;
+    margin-left:128px ;
+}
+
+.dgm-box{
+
+border-radius: 12.8px;
+background: rgba(84, 144, 245, 0.2);
+width: 328.536px;
+height: 260px;
+padding: 25.6px;
+gap:19.2px ;
+}
+
+.btn-lm{
+    color: rgb(255, 255, 255);
+    font-size: 12.8px;
+    margin: 25.6px ,25.6px;
+    
+    border-radius:6.4px;
+    background: rgb(84, 144, 245); 
+    padding: 8.8px 16px 8.8px 16px;  
 
 }
