--- a/Styles/style.css
+++ b/Styles/style.css
@@ -268,11 +268,14 @@ display: flex;
 flex-direction: column;
 justify-content: flex-start;
 align-items: center;
+text-align: center;
 gap: 24px;
 padding: 20px 40px 20px 40px;
 }
 
 .txt{
+    text-align: center;
+gap: 24px;
     box-sizing: border-box;
 border-bottom: 1px solid rgba(14, 14, 14, 0.15);
 background: rgb(255, 255, 255);
